🎨 目录结构调整 ➕ 添加依赖 🙈 忽略虚拟环境 ⬆️ 升级 MaaCommonAssets

--- a/docs/开发随笔.md
+++ b/docs/开发随笔.md
@@ -18,4 +18,18 @@
   ## 或者使用 VSCode，在项目目录中按下 F5
   ```
 
-  
+------
+
+## 依赖
+
+oxipng 是一个基于 Rust 的图片优化工具, 需要先在本地安装 Rust 环境, 不然 Precommit Check 会报错不通过, 导致无法 commit
+
+[Install Rust - Rust Programming Language](https://www.rust-lang.org/tools/install)
+
+```bash
+# 先确认 Rust 是否安装
+rustc --version
+
+# 如果安装了 Rust，尝试手动安装 oxipng
+cargo install oxipng
+```
