🎨 转换为本地发版

--- a/docs/开发随笔.md
+++ b/docs/开发随笔.md
@@ -33,3 +33,13 @@ rustc --version
 # 如果安装了 Rust，尝试手动安装 oxipng
 cargo install oxipng
 ```
+
+------
+
+## 发布
+
+```bash
+# CI 检测到 tag 会自动进行发版
+git tag v1.0.0
+git push origin v1.0.0
+```
