--- a/docs/开发随笔.md
+++ b/docs/开发随笔.md
@@ -8,6 +8,8 @@
   # Python >= 3.9
   # 安装
   python -m pip install MaaDebugger
+  # 更新
+  python -m pip install MaaDebugger MaaFW --upgrade
   # 使用
   python -m MaaDebugger
   # MaaDebugger 默认使用端口 8011。你可以通过使用 --port [port] 选项来指定 MaaDebugger 运行的端口。例如，要在端口 8080 上运行 MaaDebugger
