docs📝: 截图工具手动使用命令

--- a/docs/开发随笔.md
+++ b/docs/开发随笔.md
@@ -19,6 +19,15 @@
   python -m MaaDebugger
   ## 或者使用 VSCode，在项目目录中按下 F5
   ```
+  
+  截图工具
+  
+  ```powershell
+  # 截图工具
+  cd E:\Repo\Entertainment\Maa\MaaFramework\tools\ImageCropper
+  .venv/Scripts/activate
+  python .\main.py
+  ```
 
 ------
 
