docs📝: add docs

--- a/docs/开发随笔.md
+++ b/docs/开发随笔.md
@@ -19,9 +19,9 @@
   python -m MaaDebugger
   ## 或者使用 VSCode，在项目目录中按下 F5
   ```
-  
-  截图工具
-  
+
+- 截图工具
+
   ```powershell
   # 截图工具
   cd E:\Repo\Entertainment\Maa\MaaFramework\tools\ImageCropper
@@ -29,7 +29,7 @@
   python .\main.py
   ```
 
-------
+---
 
 ## 依赖
 
@@ -45,7 +45,7 @@ rustc --version
 cargo install oxipng
 ```
 
-------
+---
 
 ## 发布
 
@@ -54,3 +54,9 @@ cargo install oxipng
 git tag v1.0.0
 git push origin v1.0.0
 ```
+
+---
+
+[Android Key Event](https://developer.android.com/reference/android/view/KeyEvent)
+
+---
