fix🐛: 移除 1500ms 的识别速率限制, 退回默认的 1000ms, 修改错误的注释

--- a/docs/开发者文档/流程设计/简易采集/简易采集.md
+++ b/docs/开发者文档/流程设计/简易采集/简易采集.md
@@ -4,7 +4,7 @@
 
 ```mermaid
 graph TB;
-简易采集[简易采集<br>timeout: 3s<br>rate_limit: 1.5s]
+简易采集[简易采集<br>timeout: 3s]
 专注采集[专注采集<br>post_delay: 5s]
 普通采集[普通采集<br>post_delay: 5s]
 从省电模式唤醒
