docs📝: 更新自动钓鱼文档，修复一处赋值校验问题

--- a/docs/用户文档/任务流说明/自动钓鱼/自动钓鱼使用须知.md
+++ b/docs/用户文档/任务流说明/自动钓鱼/自动钓鱼使用须知.md
@@ -5,6 +5,7 @@
 - [自动钓鱼使用须知](#自动钓鱼使用须知)
   - [特别鸣谢](#特别鸣谢)
   - [程序配置界面](#程序配置界面)
+  - [高级设置界面](#高级设置界面)
   - [开始钓鱼任务](#开始钓鱼任务)
   - [结束钓鱼任务](#结束钓鱼任务)
 
@@ -18,6 +19,11 @@
 
 如图，点击`自动钓鱼`选项并勾选，随后可以设置需要自动购买的鱼竿和鱼饵，仅会在对应配件数量不足时自动购买补充
 ![image-20251116185837.png](自动钓鱼使用须知.assets/image-20251116185837.png)
+
+## 高级设置界面
+
+如果需要指定最大钓成功的鱼鱼数量，可点开高级设置界面(v0.5.2+版本)，该设置界面可设置，最大钓成功的鱼鱼数量，成功钓上的鱼数量大于等于该数值就会结束任务，默认情况下为0，即不限制成功数量上限，仅可填写数字
+![image-20251117195327.png](自动钓鱼使用须知.assets/image-20251117195327.png)
 
 ## 开始钓鱼任务
 
