docs📝: 更新自动钓鱼点选择的文档

--- a/docs/用户文档/任务流说明/自动钓鱼/自动钓鱼使用须知.md
+++ b/docs/用户文档/任务流说明/自动钓鱼/自动钓鱼使用须知.md
@@ -4,6 +4,7 @@
 
 - [自动钓鱼使用须知](#自动钓鱼使用须知)
   - [特别鸣谢](#特别鸣谢)
+  - [钓鱼点选择-必看](#钓鱼点选择-必看)
   - [程序配置界面](#程序配置界面)
   - [高级设置界面](#高级设置界面)
   - [开始钓鱼任务](#开始钓鱼任务)
@@ -14,6 +15,19 @@
 ## 特别鸣谢
 
 本程序使用的部分图片资源和部分逻辑来自[Particle_G](https://github.com/ParticleG)开发的[maa-star-resonance](https://github.com/26F-Studio/maa-star-resonance)，非常感谢！
+
+## 钓鱼点选择-必看
+
+如何选择一个适合脚本挂机的钓鱼点呢，建议找一个形如下图的位置，使之`进入钓鱼`后`退出钓鱼`，右中仍然有`钓鱼`按钮，实测每一种鱼都至少有一个这样的钓鱼点，可以仔细寻找一下
+
+1. 进入钓鱼点前：
+![image-20251122111949.png](自动钓鱼使用须知.assets/image-20251122111949.png)
+
+2. 进入钓鱼点后：
+![image-20251122112002.png](自动钓鱼使用须知.assets/image-20251122112002.png)
+
+3. 退出钓鱼点后：
+![image-20251122112014.png](自动钓鱼使用须知.assets/image-20251122112014.png)
 
 ## 程序配置界面
 
