docs📝: 更新钓鱼文档

--- a/docs/用户文档/任务流说明/自动钓鱼/自动钓鱼使用须知.md
+++ b/docs/用户文档/任务流说明/自动钓鱼/自动钓鱼使用须知.md
@@ -41,14 +41,15 @@
 
 ## 开始钓鱼任务
 
-1. 请找个钓鱼点没满的位置，钓鱼人满了会自动退出程序，建议找个进入钓鱼再退出钓鱼后，还能有下图一中钓鱼按钮的位置，比较稳定
-2. 可以在钓鱼点位置上，也可在钓鱼界面，如下面两张图均可
-3. 不用担心进入省电模式，会自动处理，只要在钓鱼位置即可
-4. 如遇服务器热重启导致的切线，本程序会自动退出
+1. 请根据上方说明选择好合适的钓鱼点
+2. 可以在钓鱼点位置上、钓鱼界面、钓鱼结果界面、游戏主界面、游戏选择角色界面、没启动星痕共鸣的界面均可，只要确保你在钓鱼点，且钓鱼点没满人，如下图较常见的界面；另外遇到无法处理的情况脚本会自动重启游戏重新登录的，请确保游戏登录状态没有过期
+3. 不用担心进入省电模式和月卡弹窗，会自动处理，游戏广告弹窗太恶心了暂时无法处理
+4. 如遇服务器热重启导致的切线，本程序也会自动处理
 5. 确认好位置，到程序页面选择`自动购买鱼竿选择`和`自动购买鱼饵选择`，并`勾选`任务，然后即可点击`开始任务`
 
 ![image-20251116190535.png](自动钓鱼使用须知.assets/image-20251116190535.png)
 ![image-20251116190542.png](自动钓鱼使用须知.assets/image-20251116190542.png)
+![image-20251123142209.png](自动钓鱼使用须知.assets/image-20251123142209.png)
 
 ## 结束钓鱼任务
 
