docs📝: 添加公告文档

--- a/assets/resource/announcement/1.简介.md
+++ b/assets/resource/announcement/1.简介.md
@@ -1,5 +1,7 @@
 # MAAStarResonance 长期公告
 
+![LOGO](./logo_transparent.png)
+
 基于 MaaFW 的 星痕共鸣 小助手。图像技术 + 模拟控制，解放双手！
 
 > **重要提示**：
@@ -14,3 +16,5 @@
 ---
 
 > PS: 文档站点正在筹备中, 后续计划上线网络访问友好的文档站点并优化更完整详细的文档
+
+---
