docs📚: 更新README，更新用户手册

--- a/docs/用户文档/任务流说明/自动钓鱼/自动钓鱼使用须知.md
+++ b/docs/用户文档/任务流说明/自动钓鱼/自动钓鱼使用须知.md
@@ -6,7 +6,6 @@
   - [特别鸣谢](#特别鸣谢)
   - [钓鱼点选择-必看](#钓鱼点选择-必看)
   - [程序配置界面](#程序配置界面)
-  - [高级设置界面](#高级设置界面)
   - [开始钓鱼任务](#开始钓鱼任务)
   - [结束钓鱼任务](#结束钓鱼任务)
 
@@ -14,7 +13,7 @@
 
 ## 特别鸣谢
 
-本程序使用的部分图片资源和部分逻辑来自[Particle_G](https://github.com/ParticleG)开发的[maa-star-resonance](https://github.com/26F-Studio/maa-star-resonance)，非常感谢！
+本程序使用的部分静态资源来自[Particle_G](https://github.com/ParticleG)开发的[maa-star-resonance](https://github.com/26F-Studio/maa-star-resonance)，非常感谢！
 
 ## 钓鱼点选择-必看
 
@@ -31,13 +30,8 @@
 
 ## 程序配置界面
 
-如图，点击`自动钓鱼`选项并勾选，随后可以设置需要自动购买的鱼竿和鱼饵，仅会在对应配件数量不足时自动购买补充
-![image-20251116185837.png](自动钓鱼使用须知.assets/image-20251116185837.png)
-
-## 高级设置界面
-
-如果需要指定最大钓成功的鱼鱼数量，可点开高级设置界面(v0.5.2+版本)，该设置界面可设置，最大钓成功的鱼鱼数量，成功钓上的鱼数量大于等于该数值就会结束任务，默认情况下为0，即不限制成功数量上限，仅可填写数字
-![image-20251117195327.png](自动钓鱼使用须知.assets/image-20251117195327.png)
+如图，点击`自动钓鱼`选项并勾选，随后可以设置需要自动购买的鱼竿和鱼饵，仅会在对应配件数量不足时自动购买补充，还有一些其他选项可根据需要自行配置
+![image-20251213170417.png](自动钓鱼使用须知.assets/image-20251213170417.png)
 
 ## 开始钓鱼任务
 
