docs📚: 对多次使用的图片去重

--- a/docs/关于/关于我们.md
+++ b/docs/关于/关于我们.md
@@ -4,6 +4,10 @@
 
 由 [MaaFramework](https://github.com/MaaXYZ/MaaFramework) 强力驱动！  
 
+## 界面预览
+
+![image-20251213170212](关于我们.assets/image-20251213170212.png)
+
 ## 声明与许可
 
 ### 开源许可
